# sigillum-library

./: .gitignore  .rubocop.yml  AGENTS.md  Gemfile  README.md  pyproject.toml
docs/architecture/: README.md  feature_extraction.md  orchestral_dsl.md  partitura.md
docs/research/: README.md  chiptune_nes_composition.md  iconic_melody_study.md  research_foundations.md
docs/reviews/: 2026-07-07_partitura_llm_first_review.md
experiments/orchestral_dsl/: production_hybrid_study.rb  storyteller_surface_study.rb
experiments/partitura/: README.md  production_hybrid_study.rb
framework/: orchestral_dsl_transport.py
framework/analysis/: __init__.py  basic.py  core.py  events.py  figuration.py  harmony.py  motif.py  pipeline.py  segment.py  tonal.py
framework/building_blocks/: __init__.py  texture.py
framework/foundation/: __init__.py  aids.py  audit.py  exports.py  paths.py  score.py
partitura/lib/: partitura.rb
partitura/test/: test_framework.rb  test_guided_manifests.rb  test_guided_runs.rb  test_jit_docs.rb  test_midi_exporter.rb  test_musicxml_export_parity.rb  test_musicxml_exporter.rb  test_musicxml_exporter_controls.rb  test_musicxml_exporter_import_safety.rb  test_orchestral_dsl.rb  test_partitura.rb  test_percussion_export.rb  test_production_checkpoints.rb  (+19 more)
technique_library/: 16th_note_figures.md  INDEX.md  __init__.py  handpan_idiom.md
tests/: test_analysis.py  test_orchestral_dsl_transport.py  test_technique_library_dsl.py
tools/: __init__.py  analyze_score.py  card_metrics.py  lib.rb  lint_structure.rb  melody_report.py  mxl_to_dsl.py  probe.py
(+548 files in other folders)
