[project]
name = "sigillum-library"
version = "0.1.0"
description = "Reusable framework, DSL, technique cards, and references for Sigillum projects."
requires-python = ">=3.11"
dependencies = [
    "mido>=1.3",
    "music21>=9",
    "numpy>=1.26",
    "pretty_midi>=0.2.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]
testpaths = ["tests"]
